--- a/carrito.css
+++ b/carrito.css
@@ -1,17 +1,15 @@
 .nuevo-producto {
-    display: flex;
-    gap: 20px;
+    display: "absolute";
+    gap: 0px;
     align-items: center;
 }
 
 .nuevo-producto img {
-    height: 100px;
+    background-color: black;
+    height: 12px;
+    width: 25px;
 }
 
-#productos-container {
-    width: 500px;
-    margin: auto;
-}
 
 .nuevo-producto h3{
     width: 130px;
@@ -21,12 +19,7 @@
     text-align: center;
 }
 
-button{
-    border: none;
-    background-color: rgb(109, 109, 109);
-    box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.459);
-    padding: 10px;
-}
+
 
 .escondido{
     display: none;
